k8s/base/vehicle-ui-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: vehicle-ui-external
spec:
  type: ExternalName
  externalName: localhost
  ports:
    - port: 9091
      targetPort: 9091
      protocol: TCP
