k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: e7012e-grafana
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - e7012e.ronstad.se
      secretName: e7012e-grafana-tls
  rules:
    - host: e7012e.ronstad.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: e7012e-prometheus
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prometheus.e7012e.ronstad.se
      secretName: e7012e-prometheus-tls
  rules:
    - host: prometheus.e7012e.ronstad.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: e7012e-car-ui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - car.ronstad.se
        - car.ronstd.se
      secretName: e7012e-car-ui-tls
  rules:
    - host: car.ronstad.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: e7012e-roof-control-hub
                port:
                  number: 9091
    - host: car.ronstd.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: e7012e-roof-control-hub
                port:
                  number: 9091
